# QtGL-paint

./: CMakeLists.txt  README.md
include/: opengl.hpp  painter.hpp
src/: main.cpp  opengl.cpp  painter.cpp
